@@ -1,3 +1,8 @@
+2011-12-10	The InnoDB Team
+
+	* include/page0page.h, page/page0page.c:
+	Fix Bug#13418887 ERROR IN DIAGNOSTIC FUNCTION PAGE_REC_PRINT()
+
 2011-11-10	The InnoDB Team
 
 	* handler/ha_innodb.cc, row/row0ins.c, innodb_replace.test:
